
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_follower {
	
    prototype.account_name             account             =      1;
	
    prototype.account_name             follower            =      2;
	
    prototype.follower_order           follower_order      =      3;
	
    prototype.time_point_sec           created_time        =      4;
	  
}


message so_list_follower_by_follower_order {
	prototype.follower_order        	follower_order  = 1;
	prototype.account_name          	account         = 2;
}


message so_unique_follower_by_account {
	prototype.account_name          	account         = 1;
}


message so_unique_follower_by_follower {
	prototype.account_name          	follower        = 1;
	prototype.account_name          	account         = 2;
}


message so_unique_follower_by_follower_order {
	prototype.follower_order        	follower_order  = 1;
	prototype.account_name          	account         = 2;
}
